fixed title align

--- a/src/components/banner/banner.styles.scss
+++ b/src/components/banner/banner.styles.scss
@@ -19,7 +19,7 @@
           margin-left: 3rem;
 
             @media(min-width: 2000px) {
-              width: 30rem;
+              width: 40rem;
               max-height: 30rem;
             }
 
@@ -35,12 +35,12 @@
 
             .banner__title {
               color: white;
-              font-size: 2rem;
+              font-size: 2.5rem;
               margin-bottom: 1rem;
 
               @media(min-width: 2000px) {
-                font-size: 3rem;
-                
+                font-size: 3.5rem;
+                margin-left: 10rem;
               }
 
               // @media(min-width: 2200px) {
@@ -66,6 +66,10 @@
 
             .banner__buttons {
               margin-top: 2rem;
+              
+              @media(min-width: 2000px) {
+                margin-left: 10rem;
+              }
 
               .banner__play {
                 background: white;
@@ -80,7 +84,7 @@
                 font-size: 1rem;
 
                 @media(min-width: 2000px) {
-                  transform: scale(1.1)
+                  
                 }
 
                 .fas.fa-play, .fas.fa-stop {
@@ -105,7 +109,7 @@
                 font-size: 1rem;
 
                 @media(min-width: 2000px) {
-                  transform: scale(1.1)
+                  
                 }
 
                 &:hover {
